--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@
   font-size: calc(20px + 16 * (100vw - 320px) / 1120);
 }
 
+.content {
+  z-index: -1;
+}
+
 .content-body-text{
   top: 90px;
   right: 90px;
@@ -25,6 +29,7 @@
   position: absolute;
   text-align:center;
 }
+
 /* @media only screen and (max-width: 990px) {
   .content-body-text{
     top: 30px;
@@ -43,4 +48,85 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+.hamburger-icon {
+  position: absolute;
+  top: 6vh;
+  right: 5vw;
+}
+
+.hamburger-icon:hover {
+  cursor: pointer;
+}
+
+.menu {
+  position: absolute;
+  top: 0px;
+  height: 100vh;
+  width: 100vw;
+  background: #FED269;
+  overflow: hidden;
+  z-index: 2;
+}
+
+.drop {
+  animation: drop 0.4s;
+  animation-timing-function: ease-in;
+  overflow: hidden;
+}
+
+@keyframes drop {
+  0% {
+    margin-bottom: 100%;
+    height: 0%; 
+  }
+
+  100% {
+    margin-bottom: 0%;
+    height: 100%;
+    overflow: hidden;
+  }
+}
+
+.rise {
+  animation: rise 0.4s;
+  animation-timing-function: ease-out;
+  margin-bottom: 100%;
+}
+
+@keyframes rise {
+  0% {
+    margin-bottom: 0%;
+    height: 100%; 
+  }
+
+  100% {
+    margin-bottom: 100%;
+    height: 0%;
+  }
+}
+
+.hidden {
+  height: 0px;
+  /* margin-bottom: 100%; */
+  /* display: none; */
+}
+
+.menu-container {
+  margin-top: 20vh;
+  margin-left: 72px;
+  /* height: 100vh; */
+  animation: drop 1s;
+}
+
+.menu-text:hover {
+  cursor: pointer;
+}
+
+.social-icon {
+  cursor: pointer;
+  margin-top: calc((45px + 33 * (100vw - 320px) / 1120) * 2/3);
+  margin-right: 1vw;
 }
