--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@
   width: 100%;
   font-family: "Poppins";
   font-size: calc(16px + 16 * (100vw - 320px) / 1120);
+  color: black;
+  opacity: .95;
 }
 
 .content {
@@ -133,7 +135,7 @@
 }
 .menu.drop .menu-link {
   opacity: 1;
-  transition: opacity 500ms cubic-bezier(0.8, 0, 0.55, 0.94) 500ms; 
+  transition: opacity 500ms cubic-bezier(0.8, 0, 0.55, 0.94) 500ms, text-shadow 150ms ease;
 }
 .bars{
   /* width: 100%;
@@ -148,7 +150,7 @@
   border-left: 1px solid rgb(255, 255, 255);
   height: 100%;
   flex: 1;
-  opacity: 30%;
+  opacity: .3;
 }
 .column:last-child{
   border-right: 1px solid rgb(255, 255, 255);
@@ -165,6 +167,18 @@
   padding-top: 24vh;
 }
 
+/* .menu-link{
+  opacity: 0;
+  font-family: "bookmania";
+  font-weight: 900;
+  font-size: calc(24px + 40 * (100vw - 320px) / 1120);
+  line-height: calc(45px + 33 * (100vw - 320px) / 1120);
+  letter-spacing: .05em;
+  color: white;
+  cursor: pointer;
+  transition: opacity 400ms cubic-bezier(0.8, 0, 0.55, 0.94)
+} */
+
 .menu-link{
   opacity: 0;
   font-family: "bookmania";
@@ -174,23 +188,157 @@
   letter-spacing: .05em;
   color: white;
   cursor: pointer;
-  transition: text-shadow 400ms cubic-bezier(0.8, 0, 0.55, 0.94), color 400ms cubic-bezier(0.8, 0, 0.55, 0.94),  opacity 400ms cubic-bezier(0.8, 0, 0.55, 0.94);
+  transition: opacity 400ms cubic-bezier(0.8, 0, 0.55, 0.94);
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
 }
 
-.menu-link:hover{
+.menu-link::before{
+  position: absolute;
+  content: attr(data-content); 
+  background-image: linear-gradient(to bottom, 
+        #FFFFFF 0%,
+        #FFFFFF 50%,
+        #364262 50%,
+        #364262 100%
+    );
+  background-size: 100% 200%;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-position: 0% 200%;
+  animation-name: exitText;
+  animation-duration: 300ms;
+  animation-timing-function: cubic-bezier(.5,0,.5,1);
+}
+@keyframes hoverText{
+  from{
+    background-position: 0% 200%;
+  }
+  to{
+    background-position: 0% 100%;
+  }
+}
+@keyframes exitText{
+  from{
+    background-position: 0% 100%;
+  }
+  to{
+    background-position: 0% 0%;
+  }
+}
+
+.menu-link:hover::before {
+  animation-name: hoverText;
+  animation-duration: 300ms;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(.5,0,.5,1);
+}
+
+/* .menu-link span{
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  transform: translateY(-100%);
+  transition: transform 275ms ease;
+  transform-origin: center top;
+}
+.menu-link span::before {
+  display: inline-block;
+  content: attr(data-content);
+  color: #364262;
+  transform: translateY(100%);
+  transition: transform 275ms ease;
+  transform-origin: center top;
+  
+}
+.menu-link:hover span {
+  transform: translateY(0);
+  transform-origin: center bottom;
+}
+.menu-link:hover span::before {
+  transform: translateY(0);
+  transform-origin: center bottom;
+} */
+
+/* .menu-link:hover{
   font-family: "bookmania";
   font-weight: 900;
   font-size: calc(24px + 40 * (100vw - 320px) / 1120);
   line-height: calc(45px + 33 * (100vw - 320px) / 1120);
   letter-spacing: .05em;
   cursor: pointer;
-  text-shadow: -1px -1px 0 rgb(0, 0, 0), 1px -1px 0 rgb(0, 0, 0), -1px 1px 0 rgb(0, 0, 0), 1px 1px 0 rgb(0, 0, 0);
-}
+  text-shadow: -1px -1px 0 #364262, 1px -1px 0 #364262, -1px 1px 0 #364262, 1px 1px 0 #364262;
+} */
 
-.social-icon {
-  cursor: pointer;
+a{
+  text-decoration: none;
+}
+.fa {
+  font-size: 32px;
+  text-decoration: none;
+}
+.social-container{
+  display: inline-flex;
+  position: relative;
+  width: 48px;
+  height: 48px;
+  border: 2px solid white;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  opacity: .9;
   margin-top: calc((45px + 33 * (100vw - 320px) / 1120) * 2/3);
   margin-right: 1vw;
+}
+
+/* a:hover .social-container{
+  border: 1px solid black;
+  transition: border 200ms ease;
+} */
+a:hover i{
+  color: #FED269;
+  transition: color 100ms ease 100ms;
+}
+i.fa{
+  color: white;
+  opacity: .9;
+  z-index: 2;
+  transition: color 100ms ease 100ms;
+}
+
+.social-background{
+  display: block;
+  overflow: hidden;
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  bottom: -1px;
+  left: -1px;
+  border-radius: 50%;
+}
+
+.social-background-inner{
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  transform: scaleY(0);
+  transition: transform 300ms cubic-bezier(0.77, 0, 0.175, 1) 0ms;
+  transform-origin: 0 100%;
+}
+
+a:hover .social-background-inner{
+  transform: scaleY(1);
+  transform-origin: 0 0;
 }
 
 .header{
@@ -303,19 +451,28 @@ label {
       --color: #FED269;
     }
 
-#wave{
+.wave{
   position: absolute;
-  width: 100vw;
-  top: 50%;
-  z-index: 2;
-  transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1); 
+  top: 100%;
+  transform: translate(0,-65%);
 }
 .waveContainer{
-  position: absolute;
-  width: 100vw;
+  position: relative;
+  width: 131.125vw;
+  left: -15.625vw;
   height: 100vh;
-  overflow: hidden;
-  z-index: 2;
+  z-index: 4;
+}
+.wave-move-up{
+  transform: translate(0,-100%);
+  transition: transform 1s cubic-bezier(0.14, 0, 0.07, 1.01);
+}
+.wave-move-down{
+  transform: translate(0, -65%);
+  transition: transform 1s;
+}
+.ease{
+  transition-delay: .6s !important;
 }
 
 .textContainer{
@@ -398,5 +555,39 @@ label {
   justify-content: center; 
   width: 100%;
   font-family: "Poppins";
-  font-size: calc(16px + 8 * (100vw - 320px) / 1120);
+  font-size: calc(10px + 10 * (100vw - 320px) / 1120);
+}
+
+.links{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.link{
+  display: inline-block;
+  vertical-align: middle;
+  list-style-image: none;
+  list-style-type: none;
+}
+
+.link a{
+  color: black;
+  opacity: .95;
+  transition: color 200ms ease;
+}
+
+.link a:hover{
+  color: #1BB994;
+  opacity: .95;
+}
+.link:after{
+  content: '\2022';
+  margin-left: 6px;
+  margin-right: 6px;
+  color: #1BB994;
+}
+
+.link:last-child:after{
+  content: '';
 }
