--- a/src/App.css
+++ b/src/App.css
@@ -326,8 +326,10 @@ i.fa{
 .social-background-inner{
   display: block;
   position: absolute;
+  overflow: hidden;
   top: 0;
   left: 0;
+  border-radius: 0;
   width: 100%;
   height: 100%;
   background: #fff;
@@ -352,11 +354,7 @@ a:hover .social-background-inner{
   align-items: center;
   justify-content: space-between;
 }
-/* .header-left{
-  justify-content: flex-start;
-  display: inline-flex;
-  width: 50%;
-} */
+
 .header-right{
   display: inline-block;
 }
@@ -366,7 +364,65 @@ a:hover .social-background-inner{
   height: 64px;
   margin-top: 10px;
 }
+a.scroll-cue {
+  padding-top: 60px;
+}
+a.scroll-cue span:after {
+  content: "";
+  position: fixed;
+  top: 0%;
+  left: 100%;
+  width: 5px;
+  height: 5px;
+  background-color: #C9EDBD;
+  -webkit-transform: translate(-100%,0) rotate(-90deg);
+  transform: translate(-100%,0) rotate(-90deg);
+  box-sizing: border-box;
+  z-index: 2;
+}
+a.scroll-cue span {
+  position: fixed;
+  top: 95%;
+  left: 50%;
+  width: 16px;
+  height: 16px;
+  border-left: 2px solid #C9EDBD;
+  border-bottom: 2px solid #C9EDBD;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-animation: fadeIn 2s, pulse 1.8s ease .4s 2;
+  animation: fadeIn 2s, pulse 1.8s ease .4s 2;
+  box-sizing: border-box;
+  z-index: 2;
+}
 
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-transform: rotate(-45deg) translate(0, 0);
+  }
+  50% {
+    -webkit-transform: rotate(-45deg) translate(-5px, 5px);
+  }
+  100% {
+    -webkit-transform: rotate(-45deg) translate(0, 0);
+  }
+}
+@keyframes pulse {
+  0% {
+    transform: rotate(-45deg) translate(0, 0);
+  }
+  50% {
+    transform: rotate(-45deg) translate(-5px, 5px);
+  }
+  100% {
+    transform: rotate(-45deg) translate(0, 0);
+  }
+}
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  70% { opacity: 0; }
+  100% { opacity: 1; }
+}
 .hamburger-circle{
   width: 46px;
   height:46px;
@@ -384,7 +440,7 @@ a:hover .social-background-inner{
   transform: scale(1.12,1.12)
 }
 
-path {
+.menuSVG path {
   fill: none;
   stroke: var(--color);
   stroke-width: 4;
@@ -456,7 +512,20 @@ label {
   top: 100%;
   transform: translate(0,-54%);
   width: 100%;
+  animation-name: wave;
+  animation-duration: 1500ms;
+  animation-timing-function: cubic-bezier(0.34, 1.38, 0.64, 1);
 }
+
+@keyframes wave{
+  from{
+    transform: translate(0,0%);
+  }
+  to{
+    transform: translate(0,-54%)
+  }
+}
+
 .waveContainer{
   position: relative;
   width: 131.125vw;
@@ -465,7 +534,7 @@ label {
   z-index: 4;
 }
 .wave-move-up{
-  transform: translate(0,-100%);
+  transform: translate(0,-99.9%);
   transition: transform 1s cubic-bezier(0.14, 0, 0.07, 1.01);
 }
 .wave-move-down{
@@ -473,7 +542,7 @@ label {
   transition: transform 1s;
 }
 .ease{
-  transition-delay: .6s !important;
+  transition-delay: .4s !important;
 }
 
 .textContainer{
@@ -724,4 +793,5 @@ label {
 .link:last-child:after{
   content: '';
 }
+
 
