--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,18 @@
   color: black;
   opacity: .95;
 }
+a{
+  color: #1BB994;
+  text-decoration: none;
+  transition: color 150ms ease;
+}
+
+a:hover{
+  color: black;
+  text-decoration: none;
+  opacity: .95;
+  transition: color 150ms ease;
+}
 
 .content {
   z-index: -1;
@@ -276,9 +288,6 @@
   text-shadow: -1px -1px 0 #364262, 1px -1px 0 #364262, -1px 1px 0 #364262, 1px 1px 0 #364262;
 } */
 
-a{
-  text-decoration: none;
-}
 .fa {
   font-size: 32px;
   text-decoration: none;
