--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 .title{
-  font-family: "bookmania";
+  font-family: "bookmania", sans-serif;
   font-weight: 900;
   font-size: calc(24px + 32 * (100vw - 320px) / 1120);
   line-height: calc(32px + 32 * (100vw - 320px) / 1120);
@@ -13,7 +13,7 @@
   display:inline-block;
   justify-content: center; 
   width: 100%;
-  font-family: "Poppins";
+  font-family: "Poppins", sans-serif;
   font-size: calc(16px + 16 * (100vw - 320px) / 1120);
   color: black;
   opacity: .95;
@@ -29,6 +29,10 @@ a:hover{
   text-decoration: none;
   opacity: .95;
   transition: color 150ms ease;
+}
+
+a:active, a:hover{
+  outline: 0;
 }
 
 .content {
@@ -179,21 +183,9 @@ a:hover{
   padding-top: 24vh;
 }
 
-/* .menu-link{
-  opacity: 0;
-  font-family: "bookmania";
-  font-weight: 900;
-  font-size: calc(24px + 40 * (100vw - 320px) / 1120);
-  line-height: calc(45px + 33 * (100vw - 320px) / 1120);
-  letter-spacing: .05em;
-  color: white;
-  cursor: pointer;
-  transition: opacity 400ms cubic-bezier(0.8, 0, 0.55, 0.94)
-} */
-
 .menu-link{
   opacity: 0;
-  font-family: "bookmania";
+  font-family: "bookmania", sans-serif;
   font-weight: 900;
   font-size: calc(24px + 40 * (100vw - 320px) / 1120);
   line-height: calc(45px + 33 * (100vw - 320px) / 1120);
@@ -306,14 +298,21 @@ i.fa{
   width: 100%;
   height: 100%;
   background: #fff;
-  transform: scaleY(0);
+  -webkit-transform: scaleY(0);
+          transform: scaleY(0);
+  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.77, 0, 0.175, 1) 0ms;
+  transition: -webkit-transform 300ms cubic-bezier(0.77, 0, 0.175, 1) 0ms;
   transition: transform 300ms cubic-bezier(0.77, 0, 0.175, 1) 0ms;
-  transform-origin: 0 100%;
+  transition: transform 300ms cubic-bezier(0.77, 0, 0.175, 1) 0ms, -webkit-transform 300ms cubic-bezier(0.77, 0, 0.175, 1) 0ms;
+  -webkit-transform-origin: 0 100%;
+          transform-origin: 0 100%;
 }
 
 a:hover .social-background-inner{
-  transform: scaleY(1);
-  transform-origin: 0 0;
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
+  -webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
 }
 
 .header{
@@ -527,7 +526,7 @@ label {
 }
 
 .longCaption{
-  font-family: "Poppins";
+  font-family: "Poppins", sans-serif;
   font-size: calc(10px + 9 * (100vw - 320px) / 1120);
   letter-spacing: .035em;
 }
@@ -655,10 +654,6 @@ label {
     transform: translate(0, -100%) !important;
     left: 12%;
     max-width: 80%;
-  }
-
-  .title{
-    /* font-size: calc(10px + 9 * (100vw - 320px) / 1120); */
   }
 
   .longCaption{
