webkit vh hack target ios portrait only

--- a/src/App.css
+++ b/src/App.css
@@ -177,7 +177,6 @@ a:active, a:hover{
   margin-left:auto;
   margin-right: auto;
   height: 100vh;
-  height: -webkit-fill-available;
 }
 
 .menu-text{
@@ -504,7 +503,6 @@ label {
   width: 131.125vw;
   left: -15.625vw;
   height: 100vh;
-  height: -webkit-fill-available;
   z-index: 4;
 }
 .wave-move-up{
@@ -536,7 +534,6 @@ label {
   position: relative;
   width: 100vw;
   height: 100vh;
-  height: -webkit-fill-available;
   overflow: hidden;
   top:0;
   left:0;
@@ -765,4 +762,27 @@ label {
   content: '';
 }
 
-
+@supports (-webkit-touch-callout: none) and (orientation: portrait){
+  .menu-container {
+    width: 90%;
+    margin-left:auto;
+    margin-right: auto;
+    height: -webkit-fill-available;
+  }
+  .imageContainer{
+    position: relative;
+    width: 100vw;
+    height: -webkit-fill-available;
+    overflow: hidden;
+    top:0;
+    left:0;
+    z-index: 3;
+  }
+  .waveContainer{
+    position: relative;
+    width: 131.125vw;
+    left: -15.625vw;
+    height: -webkit-fill-available;
+    z-index: 4;
+  }
+}
