--- a/src/App.css
+++ b/src/App.css
@@ -255,6 +255,7 @@ a:active, a:hover{
   height: 48px;
   border: 2px solid white;
   border-radius: 50%;
+  -webkit-border-radius: 50%;
   justify-content: center;
   align-items: center;
   opacity: .9;
@@ -286,6 +287,10 @@ i.fa{
   bottom: -1px;
   left: -1px;
   border-radius: 50%;
+  -webkit-border-radius: 50%;
+  z-index: 1;
+  box-sizing: border-box;
+  outline: none;
 }
 
 .social-background-inner{
@@ -305,6 +310,8 @@ i.fa{
   transition: transform 300ms cubic-bezier(0.77, 0, 0.175, 1) 0ms, -webkit-transform 300ms cubic-bezier(0.77, 0, 0.175, 1) 0ms;
   -webkit-transform-origin: 0 100%;
           transform-origin: 0 100%;
+  outline: none;
+  box-sizing: border-box;
 }
 
 a:hover .social-background-inner{
@@ -361,6 +368,7 @@ span.scroll-cue span {
   border-bottom: 2px solid #C9EDBD;
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
+  transform-origin: bottom left;
   -webkit-animation: fadeIn 2s, pulse 1.8s ease .4s 2;
   animation: fadeIn 2s, pulse 1.8s ease .4s 2;
   box-sizing: border-box;
