--- a/src/App.css
+++ b/src/App.css
@@ -793,3 +793,12 @@ label {
   width: 100%;
   height: 100%;
 }
+
+.about-section-1{
+  position: relative;
+  width: auto;
+  height: auto;
+  display:block;
+  text-align:center;
+  padding-top: 110px;
+}
