--- a/src/App.css
+++ b/src/App.css
@@ -793,3 +793,29 @@ label {
   width: 100%;
   height: 100%;
 }
+.hover-reveal {
+  position: absolute;
+  z-index: -2;
+  width: 228px;
+  height: 150px;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  opacity: 0;
+}
+
+.hover-reveal__inner {
+  overflow: hidden;
+}
+
+.hover-reveal__inner,
+.hover-reveal__img {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.hover-reveal__img {
+  background-size: cover;
+  background-position: 50% 50%;
+}
