--- a/src/App.css
+++ b/src/App.css
@@ -562,6 +562,14 @@ label {
     z-index: 5;
 }
 
+.graphTextContainer{
+    position: absolute;
+    max-width: 25%;
+    left: 15%;
+    top:40%;
+    z-index: 5;
+}
+
 .shortCaption{
     font-family: "Poppins", sans-serif;
     font-size: calc(10px + 9 * (100vw - 320px) / 600);
@@ -658,6 +666,124 @@ label {
     transform: translate(-65%,-33%);
     z-index: 3;
 }
+
+#graphPlane{
+    position: absolute;
+    width: 23%;
+    top: 50%;
+    left: 85%;
+    transform: translate(-85%,-50%);
+    z-index: -1;
+}
+
+#graphCircle{
+  position: absolute;
+  width: 5%;
+  top: 25%;
+  left: 62%;
+  transform: translate(-62%,-25%);
+  z-index: 2;
+}
+
+#graphBlue{
+  position: absolute;
+  width: 18%;
+  top: 77%;
+  left: 85%;
+  transform: translate(-85%,-77%);
+  z-index: 2;
+}
+
+#graphTopBlue{
+    position: absolute;
+    width: 18%;
+    top: 0%;
+    left: 90%;
+    transform: translate(-90%,0%);
+    z-index: 3;
+}
+
+#graphPink{
+  position: absolute;
+  width: 18%;
+  top: 93%;
+  left: 25%;
+  transform: translate(-25%,-93%);
+  z-index: 2;
+}
+
+#graphTopPink{
+    position: absolute;
+    width: 18%;
+    top: 18%;
+    left: 85%;
+    transform: translate(-85%,-18%);
+    z-index: 3;
+}
+
+#graphBotPink{
+    position: absolute;
+    width: 20%;
+    top: 100%;
+    left: 75%;
+    transform: translate(-75%,-100%);
+    z-index: 3;
+}
+
+#graphGreen{
+  position: absolute;
+  width: 13%;
+  top: 90%;
+  left: 60%;
+  transform: translate(-60%,-90%);
+  z-index: 2;
+}
+
+#graphTopGreen{
+    position: absolute;
+    width: 18%;
+    top: 2%;
+    left: 69%;
+    transform: translate(-69%,-2%);
+    z-index: 3;
+}
+
+#graphYellow{
+  position: absolute;
+  width: 11%;
+  top: 37%;
+  left: 97%;
+  transform: translate(-97%,-37%);
+  z-index: 2;
+}
+
+#graphOrange{
+    position: absolute;
+    width: 8%;
+    top: 85%;
+    left: 0%;
+    transform: translate(-0%,-85%);
+    z-index: 3;
+}
+
+#graphCorner{
+  position: absolute;
+  width: 11%;
+  top: 100%;
+  left: 100%;
+  transform: translate(-100%,-100%);
+  z-index: 2;
+}
+
+#graphShapes{
+    position: absolute;
+    width: 100%;
+    top: 100%;
+    left: 100%;
+    transform: translate(-100%,-100%);
+    z-index: 3;
+}
+
 
 #phone{
     position: absolute;
@@ -850,6 +976,12 @@ label {
     left: 8%;
     max-width: 90%;
   }
+
+  /* .graphTextContainer{
+    transform: translate(0, -170%) !important;
+    left: 12%;
+    max-width: 90%;
+  } */
 
   .shortCaption{
     font-size: calc(10px + 9 * (100vh - 320px) / 300);
