team photo spencer

--- a/src/App.css
+++ b/src/App.css
@@ -903,3 +903,131 @@ a .icon-title:hover{
   margin-bottom: 5%;
 }
 
+.gallery-container{
+  display: grid;
+  max-width: 80%;
+  grid-template-columns: repeat(auto-fit, minmax(360px, auto));
+  column-gap: 2vw;
+  row-gap: 2vw;
+  margin-right: auto;
+  margin-left: auto;
+  align-items: center;
+  justify-items: center;
+}
+#green{
+  max-width:100%;
+  object-fit: none;
+  height:333px;
+  border-radius: 4px;  
+}
+#box{
+  max-width:100%;
+  object-fit: contain;
+  height:333px;
+  border-radius: 4px;  
+}
+
+.team-member-container{
+  position: relative;
+  transform-style: preserve-3d;
+  transform: perspective(300px);
+}
+.spencer .team-member-image{
+  bottom: 4.5%;
+}
+.team-member-image{
+  width: 100%;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  transform: translateZ(20px);
+  bottom: 4.5%;
+}
+
+.team-member-hover{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  opacity: 0;
+  transition: all .5s ease;
+}
+.team-member-container:hover .team-member-hover{
+  opacity: 1;
+  transition: all .5s ease;
+}
+
+.blue-circle{
+  width: 270px;
+  height: 270px;
+  background-color: #BDE7EEff;
+  position: absolute;
+  left: 16%;
+  top: -6%;
+  border-radius: 50%;
+  opacity: 0;
+  transform: scale(0) translateZ(0px);
+  transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.team-member-container:hover .blue-circle{
+  opacity: 1;
+  transform: scale(1) translateZ(0px);
+  transition: all 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.dark-blue-circle{
+  width: 180px;
+  height: 180px;
+  background-color: #5F9DC2;
+  position: absolute;
+  left: 5%;
+  top: 30%;
+  border-radius: 50%;
+  opacity: 0;
+  transform: scale(0) translateZ(1px);
+  transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.color-smoke{
+  z-index: 2;
+  position: absolute;
+  width: 70%;
+  top: -6%;
+  left: -9%;
+  opacity: 1;
+  transform-origin: bottom right;
+  transform: scale(0) skew(30deg) rotate(30deg) translateZ(3px);
+  transition: all 1.5s ease;
+  filter: url(#turbulence);
+}
+.color-smoke-2{
+  z-index: 2;
+  position: absolute;
+  width: 75%;
+  top: 3%;
+  left: 34%;
+  opacity: 1;
+  transform-origin: bottom left;
+  transform: scale(0) skew(-30deg) rotate(-30deg) translateZ(3px);
+  transition: all 1.5s ease;
+  filter: url(#turbulence);
+}
+.team-member-container:hover .color-smoke-2{
+  transition: all 1.5s ease;
+  opacity: 1;
+  transform: scale(1) skew(0deg) rotate(0deg) translateZ(3px);
+}
+.team-member-container:hover .color-smoke{
+  transition: all 1.5s ease;
+  opacity: 1;
+  transform: scale(1) skew(0deg) rotate(0deg) translateZ(3px);
+}
+.team-member-container:hover .dark-blue-circle{
+  opacity: 1;
+  transform: scale(1) translateZ(1px);
+  transition: all 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) .5s;
+}
