--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
 .content{
   height: auto;
 }
+.no-scroll {
+  height: 100%;
+  overflow: hidden;
+}
 .title{
   font-family: "bookmania", sans-serif;
   font-weight: 900;
@@ -148,7 +152,7 @@ a:active, a:hover{
   overflow: hidden; */
   opacity: 1;
     visibility: visible;
-    transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 30px);
     transition: opacity 700ms step-start, transform 700ms cubic-bezier(0.8, 0, 0.55, 0.94), visibility 700ms step-start, background-color 700ms cubic-bezier(0.8, 0, 0.55, 0.94);
 }
 .menu.drop .menu-link {
